assets/stylesheets/site.scss
---
---

@import 'grid';
@import 'main';
@import 'top';

/* Google Fonts */
@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600);
@import url(http://fonts.googleapis.com/css?family=Hammersmith+One);

/* Variables */
$main-font: 'Hammersmith One', sans-serif;
$secondary-font: 'Josefin Sans', sans-serif;
$text-color: #171714;
$accent-text-color: #FFF;
$link-color: #777;
$hover-color: #F7322A;
$background-color: #F7F7F7;

/* Inline Elements & Typography */
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  width: 100%;
  font-family: $main-font;
  background-color: $background-color;
  color: $text-color;
}

h1 { font-size: 2.5em; }

h4 { font-size: 1.25em; }

h1, h4 {
  text-transform: uppercase;
  letter-spacing: 0.5em;
}

p {
  font-family: $secondary-font;
  line-height: 1.4em;
}

a {
  color: $link-color;
  text-decoration: none;

  &:hover {
    color: $hover-color;
  }
}

header{
  background-color: $text-color;
  padding: 1em 0;

  h2, a, a:hover {
    text-transform: uppercase;
    letter-spacing: 0.3em;
    color: $accent-text-color;
    margin: 0;
  }
}

ul {
  font-family: $main-font;
  list-style: none;
  padding-left: 1em;
  text-indent: -0.75em;
  line-height: 1.4em;
}

li { font-family: $secondary-font }

#index-top {
  background-color: #171714;
  text-align: center;
}

#civicfix { background-color: #fd4c48; }

#civicfix-pic {
  width: 80%;
  display: block;
  margin: auto;
}

.resume { 
  margin-bottom: 2em; 

  p { margin-bottom: 0.5em; }

  ul { margin: 0; }

  ul:last-child { margin-bottom: 2em; }
}

.hidden { display: none; }

/* Media query for medium screens */
@media only screen and (max-width: 48em) {
  h1 { font-size: 1.6em; }
  h4 { font-size: 0.8em; }
}

/* Media query for small screens */
@media only screen and (max-width: 30em) {
  h1 { font-size: 1.5em; }
  h4 { font-size: 0.75em; }
}

